<resources>
    <string name="app_name">MovieDB</string>
    <string name="title_popular">Popular</string>
    <string name="title_top_rated">Top Rated</string>
    <string name="title_favorites">Favorites</string>
    <string name="img_description">Movie Poster</string>
    <string name="runtime_string">Runtime:</string>
    <string name="release_date_string">Release Date:</string>
    <string name="revenue_string">Revenue:</string>
    <string name="genre_string">Genre:</string>
    <string name="similar_movies_btn">Check Similar Movies</string>
    <string name="movies_similar_to">Similar to: </string>
</resources>
