<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieDetailActivity">

    <RatingBar
        android:id="@+id/rtbMovie"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:isIndicator="true"
        android:numStars="5"
        android:rating="3.3"
        android:stepSize="0.1"
        app:layout_constraintEnd_toEndOf="@+id/imgMoviePoster"
        app:layout_constraintStart_toStartOf="@+id/imgMoviePoster"
        app:layout_constraintTop_toBottomOf="@+id/imgMoviePoster"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/txtMovieTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtMovieTagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMovieTitle"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/imgMoviePoster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/img_description"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMovieTagline" />

    <TextView
        android:id="@+id/txtMovieOverview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMovieVoteCount"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/txtMovieVoteCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/rtbMovie"
        app:layout_constraintStart_toStartOf="@+id/rtbMovie"
        app:layout_constraintTop_toBottomOf="@+id/rtbMovie" />

    <TextView
        android:id="@+id/txtRuntimeString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/runtime_string"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/imgMoviePoster"
        app:layout_constraintTop_toTopOf="@+id/imgMoviePoster"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/txtMovieRuntime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtRuntimeString"
        app:layout_constraintTop_toTopOf="@+id/txtRuntimeString" />

    <TextView
        android:id="@+id/txtReleaseDateString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/release_date_string"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="@+id/txtRuntimeString"
        app:layout_constraintTop_toBottomOf="@+id/txtRuntimeString"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/txtMovieReleaseDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtReleaseDateString"
        app:layout_constraintTop_toTopOf="@+id/txtReleaseDateString" />

    <TextView
        android:id="@+id/txtRevenueString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/revenue_string"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="@+id/txtReleaseDateString"
        app:layout_constraintTop_toBottomOf="@+id/txtReleaseDateString"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/txtMovieRevenue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtRevenueString"
        app:layout_constraintTop_toTopOf="@+id/txtRevenueString" />

    <TextView
        android:id="@+id/txtGenreString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/genre_string"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="@+id/txtRevenueString"
        app:layout_constraintTop_toBottomOf="@+id/txtRevenueString"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/txtMovieGenre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtGenreString"
        app:layout_constraintTop_toTopOf="@+id/txtGenreString" />

    <Button
        android:id="@+id/btnSimilar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/similar_movies_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>